# self_fourier_shell_correlation

./: README.md  pyproject.toml
src/: 2d_examples.ipynb  Figure1.ipynb  Figure2.ipynb  Figure4.ipynb  Figure5.ipynb  SFRC_barb.ipynb  SFSC_barb3d.ipynb  barb_SFRC.ipynb  example_1.ipynb  example_FSC.ipynb
src/self_fourier_shell_correlation/: fsc_utils.py
